--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#958E8E</color>
+    <color name="lightGreen">#00FF2A</color>
+    <color name="red">#8E1212</color>
+
 </resources>
