--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,14 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_margin">3dp</item>
         <item name="android:background">@drawable/shape_round</item>
-
+    </style>
+    <style name="TextAppearance.AppCompat.TVSubject">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/lightGreen</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:background">@drawable/shape_round</item>
     </style>
 </resources>
