--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvStudents">
-        <ImageButton
-            android:id="@+id/bthCloseAddStudentPonel"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:orientation="horizontal"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_close"
-            />
+            android:layout_width="match_parent"
+            >
+            <EditText
+                android:id="@+id/tvFIO"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/full_name"/>
+            <ImageButton
+                android:id="@+id/bthCloseAddStudentPonel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_close"
+                />
+        </FrameLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
