--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="grey">#958E8E</color>
     <color name="lightGreen">#00FF2A</color>
     <color name="red">#8E1212</color>
+    <color name="backgroundPage">#827C9A</color>
 
 </resources>
